src/test/ui/variance/variance-use-contravariant-struct-1.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/variance-use-contravariant-struct-1.rs:22:5
   |
LL | fn foo<'min,'max>(v: SomeStruct<&'max ()>)
   |        ---- ---- lifetime `'max` defined here
   |        |
   |        lifetime `'min` defined here
...
LL |     v //~ ERROR mismatched types
   |     ^ returning this value requires that `'min` must outlive `'max`

error: aborting due to previous error

